# sklearn-hydra-zen-template

./: .envrc.example  .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/workflows/: code-quality.yaml  coverage.yaml  publish.yaml  tests.yaml
src/lightning_hydra_zen_template/: eval.py  train.py
src/lightning_hydra_zen_template/configs/: __init__.py  eval.py  train.py
src/lightning_hydra_zen_template/configs/groups/: callbacks.py  data.py  debug.py  experiment.py  hparams_search.py  hydra_conf.py  logger.py  model.py  trainer.py
src/lightning_hydra_zen_template/data/: mnist.py
src/lightning_hydra_zen_template/model/: model.py
src/lightning_hydra_zen_template/model/components/: resnet.py
src/lightning_hydra_zen_template/utils/: logging.py
src/sklearn_hydra_zen_template/: eval.py  train.py
src/sklearn_hydra_zen_template/configs/: __init__.py  eval.py  train.py
src/sklearn_hydra_zen_template/configs/groups/: data.py  experiment.py  hparams_search.py  hydra_conf.py  model.py  paths.py  trainer.py
src/sklearn_hydra_zen_template/configs/utils/: utils.py
src/sklearn_hydra_zen_template/core/: datamodule.py  module.py  trainer.py
src/sklearn_hydra_zen_template/data/: iris.py
src/sklearn_hydra_zen_template/utils/: log_to_mlflow.py  print_config.py  print_metrics.py
tests/: test_eval.py  test_train.py
tests/configs/: test_configs.py
tests/core/: test_datamodule.py  test_module.py  test_trainer.py
tests/data/: test_iris.py  test_mnist.py
tests/model/: test_model.py  test_resnet.py
tests/torchmetrics/: test_torchmetrics.py
